--- a/catalog.html
+++ b/catalog.html
@@ -50,33 +50,8 @@
                     <th>Add to Cart</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>2M</td>
-                    <td>2 Module Electrical Modular Box</td>
-                    <td><img src="img2.jpg" alt="2M Box" class="product-img"></td>
-                    <td><button onclick="openInquiryPopup('2M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
-                    <td><button onclick="addToCart('2M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
-                </tr>
-                <tr>
-                    <td>3M</td>
-                    <td>3 Module Electrical Modular Box</td>
-                    <td><img src="img3.jpg" alt="3M Box" class="product-img"></td>
-                    <td><button onclick="openInquiryPopup('3M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
-                    <td><button onclick="addToCart('3M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
-                </tr>
-                <tr>
-                    <td>4M</td>
-                    <td>4 Module Electrical Modular Box</td>
-                    <td><img src="img4.jpg" alt="4M Box" class="product-img"></td>
-                    <td><button onclick="openInquiryPopup('4M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
-                    <td><button onclick="addToCart('4M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
-                </tr>
-                <tr>
-                    <td>6M</td>
-                    <td>6 Module Electrical Modular Box</td>
-                    <td><img src="img6.jpg" alt="6M Box" class="product-img"></td>
-                    <td><button onclick="openInquiryPopup('6M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
+                <!-- Inquiry Popup -->
+                <iframe aria-label='Product Inquiry' frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.in/rishabhraig1/form/ProductInquiryForm/formperma/cdGxNDhUCtJp5wN4KqqRy06JOKJPUBQvoZxY91saKtk'></iframe>
                     <td><button onclick="addToCart('6M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
@@ -107,7 +82,7 @@
                     <td><button onclick="openInquiryPopup('18M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
                     <td><button onclick="addToCart('18M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
-        <!-- Inquiry Popup -->
+in        <!-- Inquiry Popup -->
         <div id="inquiry-popup" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.5);z-index:9999;align-items:center;justify-content:center;">
             <div style="background:#fff;padding:32px;border-radius:8px;max-width:400px;margin:auto;position:relative;">
                 <button onclick="closeInquiryPopup()" style="position:absolute;top:8px;right:8px;background:#e53935;color:#fff;border:none;border-radius:50%;width:32px;height:32px;font-size:18px;cursor:pointer;">&times;</button>
