--- a/catalog.html
+++ b/catalog.html
@@ -50,8 +50,7 @@
                     <th>Add to Cart</th>
                 </tr>
             </thead>
-                <!-- Inquiry Popup -->
-                <iframe aria-label='Product Inquiry' frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.in/rishabhraig1/form/ProductInquiryForm/formperma/cdGxNDhUCtJp5wN4KqqRy06JOKJPUBQvoZxY91saKtk'></iframe>
+                <!-- Inquiry Popup removed from inline, now in modal below -->
                     <td><button onclick="addToCart('6M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
@@ -84,30 +83,10 @@
                 </tr>
 in        <!-- Inquiry Popup -->
         <div id="inquiry-popup" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.5);z-index:9999;align-items:center;justify-content:center;">
-            <div style="background:#fff;padding:32px;border-radius:8px;max-width:400px;margin:auto;position:relative;">
+            <div style="background:#fff;padding:32px;border-radius:8px;max-width:600px;width:90vw;margin:auto;position:relative;">
                 <button onclick="closeInquiryPopup()" style="position:absolute;top:8px;right:8px;background:#e53935;color:#fff;border:none;border-radius:50%;width:32px;height:32px;font-size:18px;cursor:pointer;">&times;</button>
-                <h2 style="color:#1e88e5;text-align:center;">Multi Product Inquiry</h2>
-                <form id="multi-inquiry-form">
-                    <label for="products">Select Products</label>
-                    <select id="products" name="products" multiple style="width:100%;margin-bottom:8px;">
-                        <option value="2M">2M</option>
-                        <option value="3M">3M</option>
-                        <option value="4M">4M</option>
-                        <option value="6M">6M</option>
-                        <option value="8MS">8MS</option>
-                        <option value="8MH">8MH</option>
-                        <option value="12M">12M</option>
-                        <option value="18M">18M</option>
-                    </select>
-                    <label for="name">Name</label>
-                    <input type="text" id="inq-name" name="name" required style="width:100%;margin-bottom:8px;" />
-                    <label for="email">Email</label>
-                    <input type="email" id="inq-email" name="email" required style="width:100%;margin-bottom:8px;" />
-                    <label for="comment">Comment</label>
-                    <textarea id="inq-comment" name="comment" rows="4" required style="width:100%;margin-bottom:8px;"></textarea>
-                    <button type="submit" style="background:#1e88e5;color:#fff;padding:10px 20px;border:none;border-radius:4px;cursor:pointer;width:100%;">Submit Inquiry</button>
-                </form>
-            <!-- Success message removed as mailto cannot confirm delivery -->
+                <h2 style="color:#1e88e5;text-align:center;">Product Inquiry</h2>
+                <iframe aria-label='Product Inquiry' frameborder="0" style="height:500px;width:100%;border:none;" src='https://forms.zohopublic.in/rishabhraig1/form/ProductInquiryForm/formperma/cdGxNDhUCtJp5wN4KqqRy06JOKJPUBQvoZxY91saKtk'></iframe>
             </div>
         </div>
             </tbody>
@@ -167,44 +146,12 @@ in        <!-- Inquiry Popup -->
                 }
 
                 // Inquiry popup logic
-                function openInquiryPopup(selectedModel) {
-                  document.getElementById('inquiry-popup').style.display = 'flex';
-                  // Preselect product if single product inquiry
-                  var select = document.getElementById('products');
-                  for (var i = 0; i < select.options.length; i++) {
-                    select.options[i].selected = false;
-                    if (select.options[i].value === selectedModel) {
-                      select.options[i].selected = true;
-                    }
-                  }
-                  document.getElementById('inquiry-success').style.display = 'none';
-                }
-                function closeInquiryPopup() {
-                  document.getElementById('inquiry-popup').style.display = 'none';
-                }
-                                document.getElementById('multi-inquiry-form').addEventListener('submit', function(e) {
-                                    e.preventDefault();
-                                    var products = Array.from(document.getElementById('products').selectedOptions).map(opt => opt.value).join(', ');
-                                    var name = document.getElementById('inq-name').value;
-                                    var email = document.getElementById('inq-email').value;
-                                    var comment = document.getElementById('inq-comment').value;
-                                    fetch('http://localhost:3000/api/inquiry', {
-                                        method: 'POST',
-                                        headers: { 'Content-Type': 'application/json' },
-                                        body: JSON.stringify({ products, name, email, comment })
-                                    })
-                                    .then(res => res.json())
-                                    .then(data => {
-                                        if (data.success) {
-                                            document.getElementById('inquiry-success').style.display = 'block';
-                                        } else {
-                                            alert('Failed to send inquiry. Please try again later.');
-                                        }
-                                    })
-                                    .catch(() => {
-                                        alert('Failed to send inquiry. Please try again later.');
-                                    });
-                                });
+                                function openInquiryPopup(selectedModel) {
+                                    document.getElementById('inquiry-popup').style.display = 'flex';
+                                }
+                                function closeInquiryPopup() {
+                                    document.getElementById('inquiry-popup').style.display = 'none';
+                                }
             </script>
 </body>
 </html>
