--- a/catalog.html
+++ b/catalog.html
@@ -51,6 +51,33 @@
                 </tr>
             </thead>
                 <!-- Inquiry Popup removed from inline, now in modal below -->
+                <tbody>
+                <tr>
+                    <td>2M</td>
+                    <td>2 Module Electrical Modular Box</td>
+                    <td><img src="electrical1.jpg" alt="2M Box" class="product-img"></td>
+                    <td><button onclick="openInquiryPopup('2M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
+                    <td><button onclick="addToCart('2M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
+                </tr>
+                <tr>
+                    <td>3M</td>
+                    <td>3 Module Electrical Modular Box</td>
+                    <td><img src="electrical2.jpg" alt="3M Box" class="product-img"></td>
+                    <td><button onclick="openInquiryPopup('3M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
+                    <td><button onclick="addToCart('3M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
+                </tr>
+                <tr>
+                    <td>4M</td>
+                    <td>4 Module Electrical Modular Box</td>
+                    <td><img src="manpower1.jpg" alt="4M Box" class="product-img"></td>
+                    <td><button onclick="openInquiryPopup('4M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
+                    <td><button onclick="addToCart('4M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
+                </tr>
+                <tr>
+                    <td>6M</td>
+                    <td>6 Module Electrical Modular Box</td>
+                    <td><img src="manpower2.jpg" alt="6M Box" class="product-img"></td>
+                    <td><button onclick="openInquiryPopup('6M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
                     <td><button onclick="addToCart('6M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
@@ -81,6 +108,7 @@
                     <td><button onclick="openInquiryPopup('18M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
                     <td><button onclick="addToCart('18M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
+                </tbody>
 in        <!-- Inquiry Popup -->
         <div id="inquiry-popup" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.5);z-index:9999;align-items:center;justify-content:center;">
             <div style="background:#fff;padding:32px;border-radius:8px;max-width:600px;width:90vw;margin:auto;position:relative;">
@@ -124,8 +152,8 @@ in        <!-- Inquiry Popup -->
                         '3M': '3 Module Electrical Modular Box',
                         '4M': '4 Module Electrical Modular Box',
                         '6M': '6 Module Electrical Modular Box',
-                        '8MS': '8 Module Slim Electrical Modular Box',
-                        '8MH': '8 Module Heavy Electrical Modular Box',
+                        '8MS': '8 Module Square Electrical Modular Box',
+                        '8MH': '8 Module Horizontal Electrical Modular Box',
                         '12M': '12 Module Electrical Modular Box',
                         '18M': '18 Module Electrical Modular Box'
                     };
