--- a/catalog.html
+++ b/catalog.html
@@ -55,56 +55,56 @@
                 <tr>
                     <td>2M</td>
                     <td>2 Module Electrical Modular Box</td>
-                    <td><img src="electrical1.jpg" alt="2M Box" class="product-img"></td>
+                    <td><img src="2M.jpg" alt="2M Box" class="product-img"></td>
                     <td><button onclick="openInquiryPopup('2M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
                     <td><button onclick="addToCart('2M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>3M</td>
                     <td>3 Module Electrical Modular Box</td>
-                    <td><img src="electrical2.jpg" alt="3M Box" class="product-img"></td>
+                    <td><img src="3M.jpg" alt="3M Box" class="product-img"></td>
                     <td><button onclick="openInquiryPopup('3M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
                     <td><button onclick="addToCart('3M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>4M</td>
                     <td>4 Module Electrical Modular Box</td>
-                    <td><img src="manpower1.jpg" alt="4M Box" class="product-img"></td>
+                    <td><img src="4M.jpg" alt="4M Box" class="product-img"></td>
                     <td><button onclick="openInquiryPopup('4M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
                     <td><button onclick="addToCart('4M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>6M</td>
                     <td>6 Module Electrical Modular Box</td>
-                    <td><img src="manpower2.jpg" alt="6M Box" class="product-img"></td>
+                    <td><img src="6M.jpg" alt="6M Box" class="product-img"></td>
                     <td><button onclick="openInquiryPopup('6M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
                     <td><button onclick="addToCart('6M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>8MS</td>
                     <td>8 Module Slim Electrical Modular Box</td>
-                    <td><img src="img8ms.jpg" alt="8MS Box" class="product-img"></td>
+                    <td><img src="8MS.jpg" alt="8MS Box" class="product-img"></td>
                     <td><button onclick="openInquiryPopup('8MS')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
                     <td><button onclick="addToCart('8MS')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>8MH</td>
                     <td>8 Module Heavy Electrical Modular Box</td>
-                    <td><img src="img8mh.jpg" alt="8MH Box" class="product-img"></td>
+                    <td><img src="8MH.jpg" alt="8MH Box" class="product-img"></td>
                     <td><button onclick="openInquiryPopup('8MH')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
                     <td><button onclick="addToCart('8MH')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>12M</td>
                     <td>12 Module Electrical Modular Box</td>
-                    <td><img src="img12.jpg" alt="12M Box" class="product-img"></td>
+                    <td><img src="12M.jpg" alt="12M Box" class="product-img"></td>
                     <td><button onclick="openInquiryPopup('12M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
                     <td><button onclick="addToCart('12M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>18M</td>
                     <td>18 Module Electrical Modular Box</td>
-                    <td><img src="img18.jpg" alt="18M Box" class="product-img"></td>
+                    <td><img src="18M.jpg" alt="18M Box" class="product-img"></td>
                     <td><button onclick="openInquiryPopup('18M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
                     <td><button onclick="addToCart('18M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
